src/objects/FichaPago__c.object
<CustomObject>
    <fields>
        <fullName>CadenaCodigo__c</fullName>
        <formula>PrefijoIdentificador__c &amp;( Name ) &amp; 
TEXT( YEAR( Hasta__c ) ) &amp; 
IF( LEN(TEXT(MONTH(Hasta__c)))&gt;1, TEXT( MONTH(Hasta__c)), &apos;0&apos;&amp; TEXT(MONTH(Hasta__c))) &amp; 
IF( LEN(TEXT(DAY(Hasta__c)))&gt;1, TEXT( DAY(Hasta__c)), &apos;0&apos;&amp; TEXT(DAY(Hasta__c))) &amp;
LPAD(TEXT(FLOOR(TotaPagar__c) ), 5,&quot;0&quot;) &amp;
RPAD(
   SUBSTITUTE(TEXT(TotaPagar__c - FLOOR(TotaPagar__c) ), &quot;0.&quot;, &quot;&quot;) ,2,&quot;0&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cadena para código</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Fichas de pago</relationshipLabel>
        <relationshipName>Fichas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConceptoEspecial__c</fullName>
        <defaultValue>&quot;prueba&quot;</defaultValue>
        <label>Concepto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concepto__c</fullName>
        <formula>CASE(TEXT( TipoFicha__c ), 
&quot;Nivel Doctorado&quot;, &quot;Examen de Admisión e Inscripción&quot;, 
&quot;Nivel&quot;, &quot;Inscripción&quot;, 
&quot;Promoción Cero&quot;, &quot;Cuota primer colegiatura&quot;,
&quot;Ficha Especial&quot;, &quot;Diferencia de mensualidad&quot;,
&quot;Ficha Móvil&quot;, &quot;El importe incluye &quot; &amp;  TEXT(Descuento__c * 100) &amp; &quot;% de descuento.  &quot; &amp; BR() &amp; &quot;Cuota de inscripción&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concepto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CondensacionFecha__c</fullName>
        <formula>LPAD(TEXT(((YEAR(Hasta__c) - 2013) * 372) + ( ( MONTH(Hasta__c) -1) * 31) + ( DAY(Hasta__c) - 1)), 4, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condensación de fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constante__c</fullName>
        <formula>CASE(TEXT( TipoFicha__c ), 
&quot;Nivel Doctorado&quot;, &quot;1&quot;, 
&quot;Nivel&quot;, &quot;2&quot;, 
&quot;Promoción Cero&quot;, &quot;3&quot;, 
&quot;Ficha Especial&quot;, &quot;4&quot;, 
&quot;Ficha Móvil&quot;, &quot;5&quot;, 
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <label>Descuento</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiferenciaMontoPagado__c</fullName>
        <formula>TotaPagar__c -  MontoPagado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diferencia de monto pagado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnviadoERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FechaPago__c</fullName>
        <label>Fecha de pago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolioLead__c</fullName>
        <label>Folio de lead / oportunidad</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FuentePago__c</fullName>
        <label>Fuente de pago</label>
        <picklist>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hasta__c</fullName>
        <label>Hasta el</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HoraPago__c</fullName>
        <label>Hora de pago</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importe__c</fullName>
        <label>Importe</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Fichas de pago</relationshipLabel>
        <relationshipName>Fichas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoteFichas__c</fullName>
        <label>Lote de fichas</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MontoPagado__c</fullName>
        <label>Monto pagado</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Fichas de pago</relationshipLabel>
        <relationshipName>Fichas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotaEspecial__c</fullName>
        <label>Nota</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notas1__c</fullName>
        <formula>&quot;Una vez realizado el pago no habrá devolución.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notas 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notas2__c</fullName>
        <formula>&quot;Si se requiere factura, favor de solicitar el mismo día de pago.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notas 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroAutorizacion__c</fullName>
        <description>Numero de autorización del pago</description>
        <label>Numero Autorización</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fichas de pago</relationshipLabel>
        <relationshipName>Fichas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Periodo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipLabel>Fichas de pago</relationshipLabel>
        <relationshipName>Fichas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Fichas de pago</relationshipLabel>
        <relationshipName>Fichas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrefijoIdentificador__c</fullName>
        <formula>&quot;61&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefijo identificador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramasRelacionados__c</fullName>
        <label>Programas Relacionados</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecibimosDe__c</fullName>
        <label>Recibimos de</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenciaCliente__c</fullName>
        <formula>&quot;600000&quot;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referencia del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenciaHSBC__c</fullName>
        <externalId>true</externalId>
        <label>Referencia HSBC</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReferenciaOXXO__c</fullName>
        <externalId>true</externalId>
        <label>Referencia OXXO</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TipoFicha__c</fullName>
        <label>Tipo de ficha</label>
        <picklist>
            <picklistValues>
                <fullName>Nivel Doctorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nivel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoción Cero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ficha Especial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ficha Móvil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotaPagar__c</fullName>
        <label>Total a pagar</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Ficha de pago</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TipoFicha__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RecibimosDe__c</columns>
        <columns>Hasta__c</columns>
        <columns>TotaPagar__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>AllPagadas</fullName>
        <columns>NAME</columns>
        <columns>TipoFicha__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RecibimosDe__c</columns>
        <columns>Hasta__c</columns>
        <columns>TotaPagar__c</columns>
        <columns>FuentePago__c</columns>
        <columns>FechaPago__c</columns>
        <columns>MontoPagado__c</columns>
        <columns>HoraPago__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FuentePago__c</field>
            <operation>equals</operation>
            <value>O,H</value>
        </filters>
        <label>Todos Pagadas</label>
    </listViews>
    <listViews>
        <fullName>AllPendientes</fullName>
        <columns>NAME</columns>
        <columns>TipoFicha__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RecibimosDe__c</columns>
        <columns>Hasta__c</columns>
        <columns>TotaPagar__c</columns>
        <columns>ReferenciaOXXO__c</columns>
        <columns>ReferenciaHSBC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FuentePago__c</field>
            <operation>equals</operation>
        </filters>
        <label>Todos Pendientes de pago</label>
    </listViews>
    <listViews>
        <fullName>FichasDeNivel</fullName>
        <columns>NAME</columns>
        <columns>TipoFicha__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RecibimosDe__c</columns>
        <columns>Hasta__c</columns>
        <columns>TotaPagar__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FichaPago__c.FichaNivel</value>
        </filters>
        <label>Fichas de nivel</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fichas de pago</pluralLabel>
    <recordTypes>
        <fullName>FichaEspecial</fullName>
        <active>true</active>
        <label>Ficha Especial</label>
    </recordTypes>
    <recordTypes>
        <fullName>FichaMovil</fullName>
        <active>true</active>
        <label>Ficha Móvil</label>
    </recordTypes>
    <recordTypes>
        <fullName>FichaNivel</fullName>
        <active>true</active>
        <label>Ficha de Nivel</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>